# ChangeLog for dev-perl/LWP-Protocol-https
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/LWP-Protocol-https/ChangeLog,v 1.15 2011/12/18 21:36:03 halcy0n Exp $

  18 Dec 2011; Mark Loeser <halcy0n@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Stable for ppc64; bug #386309

  19 Nov 2011; Raúl Porcel <armin76@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #386309

  08 Nov 2011; Tony Vroon <chainsaw@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in security bug #386309.

  07 Nov 2011; Jeroen Roovers <jer@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Stable for HPPA (bug #386309).

  06 Nov 2011; Markus Meier <maekke@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  arm stable, bug #386309

  06 Nov 2011; Andreas Schuerch <nativemad@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  x86 stable, bug 386309. Thanks Myckel Habets.

  06 Nov 2011; Brent Baude <ranger@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Marking LWP-Protocol-https-6.20.0 ppc stable for bug 386309

  09 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Marked ~ppc/~ppc64 wrt #358079

  07 Jul 2011; Alexis Ballier <aballier@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  keyword ~x86-fbsd, bug #358079

  12 Jun 2011; Matt Turner <mattst88@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Added ~mips, bug 358079

  15 May 2011; Raúl Porcel <armin76@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  Add ~alpha/~ia64/~m68k/~s390/~sh/~sparc wrt #358079

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  (Re)keyword for Prefix, bug #358079

  08 Apr 2011; Markus Meier <maekke@gentoo.org>
  LWP-Protocol-https-6.20.0.ebuild:
  add ~arm, bug #358079

  04 Apr 2011; Jeroen Roovers <jer@gentoo.org>