@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/LWP-Protocol-https
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/LWP-Protocol-https/ChangeLog,v 1.15 2011/12/18 21:36:03 halcy0n Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/LWP-Protocol-https/ChangeLog,v 1.16 2012/02/19 12:38:34 tove Exp $
+
+*LWP-Protocol-https-6.30.0 (19 Feb 2012)
+
+  19 Feb 2012; Torsten Veller <tove@gentoo.org>
+  +LWP-Protocol-https-6.30.0.ebuild:
+  Version bump
 
   18 Dec 2011; Mark Loeser <halcy0n@gentoo.org>
   LWP-Protocol-https-6.20.0.ebuild:
